raw/ZAHIRA NAJMA 6421 245150207111056/2024-11-14-11-31-05.ceg/compilation.txt
NT.java:16: error: ';' expected
        double[] nilaiMasuk = new double[5]
                                           ^
1 error
Not compiled
